<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name" >프라미슈</string>
    <string name="kakao_scheme">kakao72f849d440d10fb40e679b28a7057f36</string>
    <string name="kakao_app_key">72f849d440d10fb40e679b28a7057f36</string>
    <string name="kakaolink_host">kakaolink</string>
    <string name="kakaolink_template_id">16933</string>
    <string name="rest_key">KakaoAK b8b6711f4210de0410c2dfafea2dfe25</string>

    <string name="my_points">내 포인트</string>
    <string name="my_promise_credit">내 신용등급</string>
    <string name="logout">로그아웃</string>
    <string name="nav_past_appointments">지난약속</string>


    <string name="will_you_logout">진짜 로그인 </string>
    <string name="okay">확인</string>
    <string name="cancel">취소</string>

    <string name="main_dummy"><![CDATA[<b>%1$s님 <br /></b>]]>약속을 꼭 지켜주세요</string>
    <string name="create_question_1"><![CDATA[<b>%1$s</b>]]> 님 \n어떤 약속을 만들까요?</string>
    <string name="create_question_2">언제 만날까요?</string>
    <string name="create_question_3">어디서 만날까요?</string>
    <string name="promise_title">방제목을 입력해주세요</string>
    <string name="promise_date">약속 날짜</string>
    <string name="promise_time">약속 시간</string>
    <string name="promise_location">약속 장소검색</string>
    <string name="my_promise_name">내 약속 이름</string>
    <string name="go_search">장소를 검색하세요</string>
    <string name="user_list">친구목록</string>

    <string name="inviting_late_time_guide">약속시간 이후 %1$s분까지 지각입니다.</string>
    <string name="inviting_list_not_empty_text">참여자를 기다리는 중입니다.</string>
    <string name="inviting_list_empty_text">초대중 목록이 없습니다.</string>

    <string name="inviting_confirm_button_text_not_admin">방장이 참여자를 확인해야 시작됩니다.</string>
    <string name="inviting_confirm_button_text_admin">참여자 확인 완료</string>
</resources>
