<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_2"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="14dp">

        <ImageView
            android:id="@+id/promise_date_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_time_mini"
            app:layout_constraintBottom_toBottomOf="@id/promise_date"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/promise_date" />

        <TextView
            android:id="@+id/promise_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/promise_date"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintLeft_toRightOf="@id/promise_date_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/promise_date_actual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="10.28 8:30 P.M"
            android:textColor="@color/black_1"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="@id/promise_date"
            app:layout_constraintTop_toBottomOf="@id/promise_date" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="14dp">

        <ImageView
            android:id="@+id/promise_location_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_location_mini"
            app:layout_constraintBottom_toBottomOf="@id/promise_location"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/promise_location" />

        <TextView
            android:id="@+id/promise_location"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/promise_location"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintLeft_toRightOf="@id/promise_location_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/promise_location_actual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="서울 특별시 용산구 (미성 아파트)"
            android:textColor="@color/black_1"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="@id/promise_location"
            app:layout_constraintTop_toBottomOf="@id/promise_location" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="14dp">

        <ImageView
            android:id="@+id/promise_friend_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_user_mini"
            app:layout_constraintBottom_toBottomOf="@id/promise_friend"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/promise_friend" />

        <TextView
            android:id="@+id/promise_friend"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/user_list"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintLeft_toRightOf="@id/promise_friend_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <ListView
            app:layout_constraintTop_toBottomOf="@id/promise_friend"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="20dp"
            android:id="@+id/promise_friend_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>