<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.simsimhan.promissu.promise.create.CreateViewModel"/>
    </data>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/create_question2_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black_1"
        android:layout_marginTop="20dp"
        android:textSize="22sp"
        tools:text="@string/create_question_2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp">

        <TextView
            android:id="@+id/create_start_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textColor="#333333"
            android:text="시작"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/promise_start_date_layout"
            android:layout_width="0dp"
            android:layout_marginLeft="33dp"
            app:layout_constraintLeft_toRightOf="@id/create_start_text"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="wrap_content"
            android:hint="@string/promise_date">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/promise_start_date"
                android:clickable="true"
                android:focusable="false"
                android:textSize="14sp"
                android:textColor="@color/black_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/promise_start_time_layout"
            android:layout_marginTop="16dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/promise_start_date_layout"
            app:layout_constraintLeft_toLeftOf="@id/promise_start_date_layout"
            app:layout_constraintRight_toRightOf="parent"
            android:hint="@string/promise_time">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/promise_start_time_edit_text"
                android:clickable="true"
                android:focusable="false"
                android:textSize="14sp"
                android:textColor="@color/black_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/create_start_text"
            app:layout_constraintRight_toRightOf="@id/create_start_text"
            app:layout_constraintTop_toBottomOf="@id/create_start_text"
            app:layout_constraintBottom_toTopOf="@id/create_end_text"
            android:src="@drawable/ic_icon_create_promise_dividing_line"/>


        <TextView
            android:id="@+id/create_end_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            app:layout_constraintTop_toBottomOf="@id/create_start_text"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="130dp"
            android:textColor="#333333"
            android:text="종료"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/promise_end_date_layout"
            android:layout_width="0dp"
            android:layout_marginLeft="33dp"
            app:layout_constraintLeft_toRightOf="@id/create_end_text"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/create_end_text"
            android:layout_height="wrap_content"
            android:hint="@string/promise_date">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/promise_end_date"
                android:clickable="true"
                android:focusable="false"
                android:textSize="14sp"
                android:textColor="@color/black_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/promise_end_time_layout"
            android:layout_marginTop="16dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/promise_end_date_layout"
            app:layout_constraintLeft_toLeftOf="@id/promise_end_date_layout"
            app:layout_constraintRight_toRightOf="parent"
            android:hint="@string/promise_time">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/promise_end_time_edit_text"
                android:clickable="true"
                android:focusable="false"
                android:textSize="14sp"
                android:textColor="@color/black_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>







</LinearLayout>
</layout>